--- a/src/pages/stylesGames.css
+++ b/src/pages/stylesGames.css
@@ -1,8 +1,5 @@
 .tablero {
-  height: 700px;
-  width: 700px;
   border-color: var(--3jr-letterbotton);
-  /* margin-top: 1%; */
 }
 
 .grid {
@@ -47,7 +44,11 @@
   color: var(--3jr-letterbotton);
   border-radius: var(--3jr-border-radius);
 }
-
+@media screen and (max-width: 900px) {
+  .grid h1 {
+    margin-top: -50px;
+  }
+}
 @media screen and (max-width: 800px) {
   .inicio {
     margin-left: 75px;
