--- a/src/pages/Ahorcado/stylesAHC.css
+++ b/src/pages/Ahorcado/stylesAHC.css
@@ -98,6 +98,14 @@ form {
 
   #hangmanCanvas {
     margin-left: 25px;
+    width: 130px;
+  }
+  #message,
+  #remainingAttempts,
+  #wrongLetters,
+  #word {
+    font-size: 1rem;
+    margin-left: 180px;
   }
 }
 @media screen and (max-width: 400px) {
@@ -115,11 +123,22 @@ form {
   #hangmanCanvas {
     margin-left: 15px;
   }
+  #message,
+  #remainingAttempts,
+  #wrongLetters,
+  #word {
+    font-size: 0.8rem;
+  }
 }
 @media screen and (max-width: 300px) {
   .tableroAHC {
-    /* height: 200px; */
     width: 210px;
     margin-top: 100px;
+  }
+  #message,
+  #remainingAttempts,
+  #wrongLetters,
+  #word {
+    font-size: 0.65rem;
   }
 }
