--- a/mediastyle.css
+++ b/mediastyle.css
@@ -65,6 +65,8 @@
 @media screen and (max-width: 500px) {
   .content {
     width: 400px;
+    margin-top: 20%;
+    margin-bottom: 20%;
   }
 }
 
@@ -72,7 +74,7 @@
   .portada {
     width: 80%;
     margin-top: 10%;
-    margin-bottom: 10%;
+    /* margin-bottom: 10%; */
   }
   .content {
     width: 300px;
