--- a/mediastyle.css
+++ b/mediastyle.css
@@ -72,9 +72,9 @@
 
 @media screen and (max-width: 432px) {
   .portada {
-    width: 80%;
-    margin-top: 10%;
-    /* margin-bottom: 10%; */
+    width: 100%;
+    margin-top: 20%;
+    margin-bottom: 20%;
   }
   .content {
     width: 300px;
