--- a/src/pages/Ahorcado/stylesAHC.css
+++ b/src/pages/Ahorcado/stylesAHC.css
@@ -133,12 +133,29 @@ form {
 @media screen and (max-width: 300px) {
   .tableroAHC {
     width: 210px;
-    margin-top: 100px;
+    margin-top: 90px;
+    margin-left: 15px;
   }
   #message,
   #remainingAttempts,
   #wrongLetters,
   #word {
     font-size: 0.65rem;
+  }
+  #wrongLetters {
+    margin-left: 65px;
+    margin-top: -55px;
+  }
+  #message {
+    margin-top: 50px;
+    margin-left: 40px;
+  }
+  #word {
+    margin-top: 50px;
+    margin-left: -5px;
+  }
+  #hangmanCanvas {
+    margin-left: 50px;
+    width: 110px;
   }
 }
