--- a/src/pages/tresEnRaya/stylesTER.css
+++ b/src/pages/tresEnRaya/stylesTER.css
@@ -36,25 +36,37 @@
 
 @media screen and (max-width: 500px) {
   .tableroTER {
-    height: 300px;
-    width: 330px;
-    margin-top: 110px;
+    height: 360px;
+    width: 350px;
+    margin-top: 100px;
     margin-left: 50px;
   }
 }
 
 @media screen and (max-width: 400px) {
   .tableroTER {
-    height: 250px;
-    width: 260px;
-    margin-top: 100px;
+    height: 300px;
+    width: 300px;
+    margin-top: 180px;
+    margin-left: 35px;
+  }
+  .celda {
+    font-size: var(--3jr-fontsize-l);
+  }
+  #contenedor {
+    height: 800px;
+    /* width: 400px; */
+    /* margin-top: 20px; */
   }
 }
-
 @media screen and (max-width: 300px) {
   .tableroTER {
-    height: 200px;
+    height: 250px;
     width: 210px;
-    margin-top: 100px;
+    margin-top: 250px;
+    margin-left: 15px;
+  }
+  #contenedor {
+    margin-left: 15px;
   }
 }
