--- a/src/components/footer/footer.css
+++ b/src/components/footer/footer.css
@@ -19,6 +19,11 @@ footer {
     font-size: var(--3jr-fontsize-s);
   }
 }
+@media screen and (max-width: 500px) {
+  footer {
+    margin-top: 40%;
+  }
+}
 
 @media screen and (max-width: 350px) {
   footer {
